work on comparisions with graph NN sum stats

--- a/Code/Exploratory Data Analysis/Tabular Financial/Tabular Financial Statements Data EDA.ipynb
+++ b/Code/Exploratory Data Analysis/Tabular Financial/Tabular Financial Statements Data EDA.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -74,85 +74,85 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Ratio_A</th>\n",
-       "      <td>50,264.00</td>\n",
-       "      <td>93.38</td>\n",
-       "      <td>15,380.42</td>\n",
-       "      <td>-2,882.66</td>\n",
+       "      <td>47,917.00</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>-0.02</td>\n",
        "      <td>0.01</td>\n",
        "      <td>0.02</td>\n",
        "      <td>0.03</td>\n",
-       "      <td>3,151,375.00</td>\n",
+       "      <td>0.08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Ratio_B</th>\n",
-       "      <td>50,264.00</td>\n",
-       "      <td>1,105.62</td>\n",
-       "      <td>139,883.86</td>\n",
-       "      <td>-0.15</td>\n",
+       "      <td>47,917.00</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.04</td>\n",
        "      <td>0.10</td>\n",
-       "      <td>0.17</td>\n",
+       "      <td>0.18</td>\n",
        "      <td>0.28</td>\n",
-       "      <td>19,550,375.00</td>\n",
+       "      <td>0.70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Ratio_C</th>\n",
-       "      <td>50,261.00</td>\n",
-       "      <td>6.64</td>\n",
-       "      <td>436.30</td>\n",
-       "      <td>-5,625.94</td>\n",
+       "      <td>49,184.00</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.03</td>\n",
-       "      <td>58,209.14</td>\n",
+       "      <td>0.92</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Ratio_D</th>\n",
-       "      <td>50,264.00</td>\n",
-       "      <td>5.09</td>\n",
-       "      <td>235.49</td>\n",
-       "      <td>-9,499.87</td>\n",
+       "      <td>48,493.00</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>-0.13</td>\n",
        "      <td>0.01</td>\n",
        "      <td>0.10</td>\n",
-       "      <td>0.23</td>\n",
-       "      <td>49,733.23</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>0.57</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Ratio_E</th>\n",
-       "      <td>50,264.00</td>\n",
-       "      <td>7.00</td>\n",
-       "      <td>3,266.23</td>\n",
-       "      <td>-7,373.99</td>\n",
+       "      <td>49,033.00</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>-0.74</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.16</td>\n",
        "      <td>0.37</td>\n",
-       "      <td>692,819.58</td>\n",
+       "      <td>1.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Altman_Z</th>\n",
-       "      <td>50,259.00</td>\n",
-       "      <td>388.88</td>\n",
-       "      <td>74,883.80</td>\n",
-       "      <td>-11,622.42</td>\n",
+       "      <td>47,412.00</td>\n",
+       "      <td>0.72</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>-1.23</td>\n",
        "      <td>0.30</td>\n",
-       "      <td>0.69</td>\n",
-       "      <td>1.16</td>\n",
-       "      <td>16,702,175.60</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>1.11</td>\n",
+       "      <td>3.26</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             count     mean        std        min  25%  50%  75%           max\n",
-       "Ratio_A  50,264.00    93.38  15,380.42  -2,882.66 0.01 0.02 0.03  3,151,375.00\n",
-       "Ratio_B  50,264.00 1,105.62 139,883.86      -0.15 0.10 0.17 0.28 19,550,375.00\n",
-       "Ratio_C  50,261.00     6.64     436.30  -5,625.94 0.00 0.00 0.03     58,209.14\n",
-       "Ratio_D  50,264.00     5.09     235.49  -9,499.87 0.01 0.10 0.23     49,733.23\n",
-       "Ratio_E  50,264.00     7.00   3,266.23  -7,373.99 0.00 0.16 0.37    692,819.58\n",
-       "Altman_Z 50,259.00   388.88  74,883.80 -11,622.42 0.30 0.69 1.16 16,702,175.60"
+       "             count  mean  std   min  25%  50%  75%  max\n",
+       "Ratio_A  47,917.00  0.02 0.02 -0.02 0.01 0.02 0.03 0.08\n",
+       "Ratio_B  47,917.00  0.21 0.15  0.04 0.10 0.18 0.28 0.70\n",
+       "Ratio_C  49,184.00  0.06 0.18  0.00 0.00 0.00 0.03 0.92\n",
+       "Ratio_D  48,493.00  0.13 0.16 -0.13 0.01 0.10 0.22 0.57\n",
+       "Ratio_E  49,033.00  0.18 0.33 -0.74 0.00 0.16 0.37 1.01\n",
+       "Altman_Z 47,412.00  0.72 0.60 -1.23 0.30 0.67 1.11 3.26"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,14 +168,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_16928\\2473512405.py:13: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_11284\\2386111148.py:13: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  table_a1_replication = pd.concat([table_a1_replication, pd.DataFrame({'Item': variable, 'Count': var_count, 'Percent_of_Total_Assets': 100*var_mean/total_assets_mean}, index=[0])])\n"
      ]
     },
@@ -209,68 +209,62 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>totalAssets</td>\n",
-       "      <td>50283</td>\n",
+       "      <td>49033</td>\n",
        "      <td>100.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>totalCurrentLiabilities</td>\n",
-       "      <td>50283</td>\n",
-       "      <td>20.23</td>\n",
+       "      <td>49184</td>\n",
+       "      <td>18.95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>totalLiabilities</td>\n",
-       "      <td>50283</td>\n",
-       "      <td>64.12</td>\n",
+       "      <td>49184</td>\n",
+       "      <td>63.89</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>totalEquity</td>\n",
        "      <td>50283</td>\n",
-       "      <td>33.29</td>\n",
+       "      <td>32.47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>retainedEarnings</td>\n",
        "      <td>50283</td>\n",
-       "      <td>21.36</td>\n",
+       "      <td>20.83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>totalCurrentAssets</td>\n",
-       "      <td>50283</td>\n",
-       "      <td>28.46</td>\n",
+       "      <td>49033</td>\n",
+       "      <td>26.77</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>revenue</td>\n",
-       "      <td>50283</td>\n",
-       "      <td>17.16</td>\n",
+       "      <td>49060</td>\n",
+       "      <td>17.13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>EBIT</td>\n",
-       "      <td>50283</td>\n",
-       "      <td>2.09</td>\n",
+       "      <td>49060</td>\n",
+       "      <td>1.94</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>common_plus_preferred_stock</td>\n",
        "      <td>50283</td>\n",
-       "      <td>2.30</td>\n",
+       "      <td>2.24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>workingCapital</td>\n",
-       "      <td>50283</td>\n",
-       "      <td>8.23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Altman_Z</td>\n",
-       "      <td>50259</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>48493</td>\n",
+       "      <td>7.87</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -278,20 +272,19 @@
       ],
       "text/plain": [
        "                          Item  Count  Percent_of_Total_Assets\n",
-       "0                  totalAssets  50283                   100.00\n",
-       "0      totalCurrentLiabilities  50283                    20.23\n",
-       "0             totalLiabilities  50283                    64.12\n",
-       "0                  totalEquity  50283                    33.29\n",
-       "0             retainedEarnings  50283                    21.36\n",
-       "0           totalCurrentAssets  50283                    28.46\n",
-       "0                      revenue  50283                    17.16\n",
-       "0                         EBIT  50283                     2.09\n",
-       "0  common_plus_preferred_stock  50283                     2.30\n",
-       "0               workingCapital  50283                     8.23\n",
-       "0                     Altman_Z  50259                     0.00"
+       "0                  totalAssets  49033                   100.00\n",
+       "0      totalCurrentLiabilities  49184                    18.95\n",
+       "0             totalLiabilities  49184                    63.89\n",
+       "0                  totalEquity  50283                    32.47\n",
+       "0             retainedEarnings  50283                    20.83\n",
+       "0           totalCurrentAssets  49033                    26.77\n",
+       "0                      revenue  49060                    17.13\n",
+       "0                         EBIT  49060                     1.94\n",
+       "0  common_plus_preferred_stock  50283                     2.24\n",
+       "0               workingCapital  48493                     7.87"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +299,7 @@
     "# Loop over each variable\n",
     "# Drop missing or infinite values\n",
     "# Compute count and mean\n",
-    "for variable in ['totalAssets', 'totalCurrentLiabilities', 'totalLiabilities', 'totalEquity', 'retainedEarnings', 'totalCurrentAssets', 'revenue', 'EBIT', 'common_plus_preferred_stock', 'workingCapital', 'Altman_Z']:\n",
+    "for variable in ['totalAssets', 'totalCurrentLiabilities', 'totalLiabilities', 'totalEquity', 'retainedEarnings', 'totalCurrentAssets', 'revenue', 'EBIT', 'common_plus_preferred_stock', 'workingCapital']:\n",
     "    var_count = tf[variable].replace([np.inf, -np.inf], np.nan).dropna().count()\n",
     "    var_mean = tf[variable].replace([np.inf, -np.inf], np.nan).dropna().mean()\n",
     "    table_a1_replication = pd.concat([table_a1_replication, pd.DataFrame({'Item': variable, 'Count': var_count, 'Percent_of_Total_Assets': 100*var_mean/total_assets_mean}, index=[0])])\n",
