code set up for market cap webscrape

--- a/Code/Data Loading and Cleaning/Tabular Financial/Get Historical Market Cap Data.ipynb
+++ b/Code/Data Loading and Cleaning/Tabular Financial/Get Historical Market Cap Data.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -44,29 +44,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Symbol</th>\n",
+       "      <th>Start_Date</th>\n",
+       "      <th>End_Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AA</td>\n",
+       "      <td>2010-01-01</td>\n",
+       "      <td>2013-12-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AA</td>\n",
+       "      <td>2014-01-01</td>\n",
+       "      <td>2016-12-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AAL</td>\n",
+       "      <td>2010-01-01</td>\n",
+       "      <td>2013-12-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AAL</td>\n",
+       "      <td>2014-01-01</td>\n",
+       "      <td>2016-12-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AAP</td>\n",
+       "      <td>2010-01-01</td>\n",
+       "      <td>2013-12-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1767</th>\n",
+       "      <td>YUM</td>\n",
+       "      <td>2014-01-01</td>\n",
+       "      <td>2016-12-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1768</th>\n",
+       "      <td>ZBRA</td>\n",
+       "      <td>2010-01-01</td>\n",
+       "      <td>2013-12-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1769</th>\n",
+       "      <td>ZBRA</td>\n",
+       "      <td>2014-01-01</td>\n",
+       "      <td>2016-12-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1770</th>\n",
+       "      <td>ZTS</td>\n",
+       "      <td>2010-01-01</td>\n",
+       "      <td>2013-12-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1771</th>\n",
+       "      <td>ZTS</td>\n",
+       "      <td>2014-01-01</td>\n",
+       "      <td>2016-12-31</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1772 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Symbol  Start_Date    End_Date\n",
+       "0        AA  2010-01-01  2013-12-31\n",
+       "1        AA  2014-01-01  2016-12-31\n",
+       "2       AAL  2010-01-01  2013-12-31\n",
+       "3       AAL  2014-01-01  2016-12-31\n",
+       "4       AAP  2010-01-01  2013-12-31\n",
+       "...     ...         ...         ...\n",
+       "1767    YUM  2014-01-01  2016-12-31\n",
+       "1768   ZBRA  2010-01-01  2013-12-31\n",
+       "1769   ZBRA  2014-01-01  2016-12-31\n",
+       "1770    ZTS  2010-01-01  2013-12-31\n",
+       "1771    ZTS  2014-01-01  2016-12-31\n",
+       "\n",
+       "[1772 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create symbol start and end dates for individual requests\n",
+    "group_1_dates = [\"2010-01-01\", \"2013-12-31\"]\n",
+    "group_2_dates = [\"2014-01-01\", \"2016-12-31\"]\n",
+    "\n",
+    "# Dataframe of distinct symbols_list and group_1_dates as two columns\n",
+    "df1 = pd.DataFrame(distinct_symbols_list, columns=[\"Symbol\"])\n",
+    "df1[\"Start_Date\"] = group_1_dates[0]\n",
+    "df1[\"End_Date\"] = group_1_dates[1]\n",
+    "\n",
+    "# Dataframe of distinct symbols_list and group_2_dates as two columns\n",
+    "df2 = pd.DataFrame(distinct_symbols_list, columns=[\"Symbol\"])\n",
+    "df2[\"Start_Date\"] = group_2_dates[0]\n",
+    "df2[\"End_Date\"] = group_2_dates[1]\n",
+    "\n",
+    "# Concatenate the two dataframes\n",
+    "api_requests_df = pd.concat([df1, df2]).sort_values(by=[\"Symbol\", \"Start_Date\"]).reset_index(drop=True)\n",
+    "api_requests_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# API key for accessing the financial data\n",
     "api_key = \"GzzXB8zIm8u1NJzcFKZNOwcOyxarZEmi\"\n",
     "\n",
+    "# Function to fetch market cap data during period for company\n",
+    "def fetch_market_cap(company, start_date, end_date):\n",
+    "    market_cap = requests.get(f'https://financialmodelingprep.com/api/v3/historical-market-capitalization/{company}?from={start_date}&to={end_date}&apikey={api_key}')\n",
+    "    market_cap = market_cap.json()\n",
+    "    return market_cap\n",
+    "\n",
     "# # Function to fetch financial statements data\n",
     "# def fetch_financial_statements(company):\n",
-    "#     # Number of years for which data will be retrieved\n",
-    "#     quarters = 67\n",
     "    \n",
     "#     # Fetching balance sheet data\n",
     "#     balance_sheet = requests.get(f'https://financialmodelingprep.com/api/v3/balance-sheet-statement/{company}?period=quarter&limit={quarters}&apikey={api_key}')\n",
     "#     balance_sheet = balance_sheet.json()\n",
-    "\n",
-    "#     # Fetching income statement data\n",
-    "#     income_statement = requests.get(f'https://financialmodelingprep.com/api/v3/income-statement/{company}?period=quarter&limit={quarters}&apikey={api_key}')\n",
-    "#     income_statement = income_statement.json()\n",
-    "    \n",
-    "#     # Fetching cash flow statement data\n",
-    "#     cash_flow_statement = requests.get(f'https://financialmodelingprep.com/api/v3/cash-flow-statement/{company}?period=quarter&limit={quarters}&apikey={api_key}')\n",
-    "#     cash_flow_statement = cash_flow_statement.json()\n",
     "\n",
     "#     return balance_sheet, income_statement, cash_flow_statement"
    ]
