fully set up market cap code

--- a/Code/Data Loading and Cleaning/Tabular Financial/Get Historical Market Cap Data.ipynb
+++ b/Code/Data Loading and Cleaning/Tabular Financial/Get Historical Market Cap Data.ipynb
@@ -194,7 +194,7 @@
    "outputs": [],
    "source": [
     "# API key for accessing the financial data\n",
-    "api_key = \"GzzXB8zIm8u1NJzcFKZNOwcOyxarZEmi\"\n",
+    "#api_key = \"GzzXB8zIm8u1NJzcFKZNOwcOyxarZEmi\"\n",
     "\n",
     "# Function to fetch market cap data during period for company\n",
     "def fetch_market_cap(company, start_date, end_date):\n",
@@ -202,14 +202,33 @@
     "    market_cap = market_cap.json()\n",
     "    return market_cap\n",
     "\n",
-    "# # Function to fetch financial statements data\n",
-    "# def fetch_financial_statements(company):\n",
-    "    \n",
-    "#     # Fetching balance sheet data\n",
-    "#     balance_sheet = requests.get(f'https://financialmodelingprep.com/api/v3/balance-sheet-statement/{company}?period=quarter&limit={quarters}&apikey={api_key}')\n",
-    "#     balance_sheet = balance_sheet.json()\n",
+    "# Iterate over dataframe rows\n",
+    "# May need to break this up into smaller chunks to avoid API rate limits\n",
+    "market_cap_data = [] # Initialize empty list to store the fetched data\n",
+    "for index, row in api_requests_df.iterrows():\n",
     "\n",
-    "#     return balance_sheet, income_statement, cash_flow_statement"
+    "    # Fetch market cap data\n",
+    "    company = row[\"Symbol\"]\n",
+    "    start_date = row[\"Start_Date\"]\n",
+    "    end_date = row[\"End_Date\"]\n",
+    "    market_cap = fetch_market_cap(company, start_date, end_date)\n",
+    "    \n",
+    "    # Append fetched data to list\n",
+    "    market_cap_data.extend(market_cap)\n",
+    "\n",
+    "# Combine data into a single DataFrame\n",
+    "market_cap_data = pd.DataFrame(market_cap_data)\n",
+    "market_cap_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save CSV file\n",
+    "market_cap_data.to_csv(\"~\\Box\\STAT 222 Capstone\\Raw Data\\Market Cap Data\\market_cap_data.csv\")"
    ]
   }
  ],
