flag for investment grade

--- a/Code/Data Loading and Cleaning/All Data/Create Combined All Data - Fixed Quarter Dates.ipynb
+++ b/Code/Data Loading and Cleaning/All Data/Create Combined All Data - Fixed Quarter Dates.ipynb
@@ -664,6 +664,8 @@
     "rating_dict = {rating: i for i, rating in enumerate(rating_order, 1)}\n",
     "# Create new column \"Rating Rank AAA is 10\"\n",
     "merged['Rating Rank AAA is 10'] = merged['Rating'].map(rating_dict)\n",
+    "# Flag for investment grade - Rating Rank >= 7.0\n",
+    "merged['Investment_Grade'] = merged['Rating Rank AAA is 10'] >= 7.0\n",
     "# Create new column \"rating_on_previous_fixed_quarter_date AAA is 10\"\n",
     "merged['rating_on_previous_fixed_quarter_date AAA is 10'] = merged['rating_on_previous_fixed_quarter_date'].map(rating_dict)\n",
     "\n",
