update EDA files

--- a/Code/Exploratory Data Analysis/All Data/All Data - NLP EDA - NER on Company Names.ipynb
+++ b/Code/Exploratory Data Analysis/All Data/All Data - NLP EDA - NER on Company Names.ipynb
@@ -31,13 +31,7 @@
    "source": [
     "# Packages\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import nltk\n",
-    "from nltk.tokenize import word_tokenize\n",
-    "from nltk.corpus import stopwords\n",
-    "from nltk.probability import FreqDist\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "import seaborn as sns"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -73,7 +67,7 @@
     "tqdm.pandas()\n",
     "\n",
     "# load model and disable unnecessary components\n",
-    "nlp = spacy.load('en_core_web_sm', disable=['tagger', 'parser', 'lemmatizer', 'attribute_ruler', 'morphologizer', 'textcat'])\n",
+    "nlp = spacy.load('en_core_web_sm', disable=['tagger', 'parser', 'lemmatizer', 'attribute_ruler', 'morphologizer', 'textcat', 'toc2vec'])\n",
     "\n",
     "# Function to process transcript and count company mentions\n",
     "def count_companies(text):\n",
