--- a/Code/Exploratory Data Analysis/Tabular Financial/Tabular Financial Statements Data EDA.ipynb
+++ b/Code/Exploratory Data Analysis/Tabular Financial/Tabular Financial Statements Data EDA.ipynb
@@ -290,7 +290,7 @@
     }
    ],
    "source": [
-    "# Checking normalized average fianncial value to compare to the paper's table A.1\n",
+    "# Checking normalized average fianncial value to compare to the graph NN paper's table A.1\n",
     "# Empty dataframe to store item, count, and percent_of_total_assets\n",
     "table_a1_replication = pd.DataFrame(columns=['Item', 'Count', 'Percent_of_Total_Assets'])\n",
     "# Compute average values of: totalAssets, currentLiabilities, totalLiabilities, totalEquity, retainedEarnings, currentAssets, netSales (revenue stand-in), EBIT (ebitda minus depreciation, etc),  market value of equity (commonStock + preferredStock stand-in), workingCapital, and Altman_Z\n",
