add market cap check

--- a/Code/Exploratory Data Analysis/Tabular Financial/Tabular Financial Statements Data EDA.ipynb
+++ b/Code/Exploratory Data Analysis/Tabular Financial/Tabular Financial Statements Data EDA.ipynb
@@ -175,7 +175,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_16932\\3953475764.py:13: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_19080\\317268136.py:13: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  table_a1_replication = pd.concat([table_a1_replication, pd.DataFrame({'Item': variable, 'Count': var_count, 'Percent_of_Total_Assets': 100*var_mean/total_assets_mean}, index=[0])])\n"
      ]
     },
@@ -256,9 +256,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>common_plus_preferred_stock</td>\n",
-       "      <td>20825</td>\n",
-       "      <td>2.46</td>\n",
+       "      <td>marketCap</td>\n",
+       "      <td>18034</td>\n",
+       "      <td>136.18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -271,17 +271,17 @@
        "</div>"
       ],
       "text/plain": [
-       "                          Item  Count  Percent_of_Total_Assets\n",
-       "0                  totalAssets  20312                   100.00\n",
-       "0      totalCurrentLiabilities  20414                    18.96\n",
-       "0             totalLiabilities  20414                    61.46\n",
-       "0                  totalEquity  20825                    34.20\n",
-       "0             retainedEarnings  20825                    21.83\n",
-       "0           totalCurrentAssets  20312                    27.53\n",
-       "0                      revenue  20256                    17.86\n",
-       "0                         EBIT  20256                     1.96\n",
-       "0  common_plus_preferred_stock  20825                     2.46\n",
-       "0               workingCapital  20075                     8.66"
+       "                      Item  Count  Percent_of_Total_Assets\n",
+       "0              totalAssets  20312                   100.00\n",
+       "0  totalCurrentLiabilities  20414                    18.96\n",
+       "0         totalLiabilities  20414                    61.46\n",
+       "0              totalEquity  20825                    34.20\n",
+       "0         retainedEarnings  20825                    21.83\n",
+       "0       totalCurrentAssets  20312                    27.53\n",
+       "0                  revenue  20256                    17.86\n",
+       "0                     EBIT  20256                     1.96\n",
+       "0                marketCap  18034                   136.18\n",
+       "0           workingCapital  20075                     8.66"
       ]
      },
      "execution_count": 4,
@@ -299,7 +299,7 @@
     "# Loop over each variable\n",
     "# Drop missing or infinite values\n",
     "# Compute count and mean\n",
-    "for variable in ['totalAssets', 'totalCurrentLiabilities', 'totalLiabilities', 'totalEquity', 'retainedEarnings', 'totalCurrentAssets', 'revenue', 'EBIT', 'common_plus_preferred_stock', 'workingCapital']:\n",
+    "for variable in ['totalAssets', 'totalCurrentLiabilities', 'totalLiabilities', 'totalEquity', 'retainedEarnings', 'totalCurrentAssets', 'revenue', 'EBIT', 'marketCap', 'workingCapital']:\n",
     "    var_count = tf[variable].replace([np.inf, -np.inf], np.nan).dropna().count()\n",
     "    var_mean = tf[variable].replace([np.inf, -np.inf], np.nan).dropna().mean()\n",
     "    table_a1_replication = pd.concat([table_a1_replication, pd.DataFrame({'Item': variable, 'Count': var_count, 'Percent_of_Total_Assets': 100*var_mean/total_assets_mean}, index=[0])])\n",
